--- a/css/text_animation.css
+++ b/css/text_animation.css
@@ -9,60 +9,60 @@
     font-size: 2.8dvh;
     color: var(--tetris-red);
     text-shadow: 0.1dvh 0.1dvh rgba(0, 0, 0, 1),
-                0.15dvh 0.15dvh 5px rgba(255, 255, 255, 1),
-                -0.15dvh -0.15dvh 5px rgba(255, 255, 255, 1);
+                0.15dvh 0.15dvh 0.7dvh rgba(255, 255, 255, 1),
+                -0.15dvh -0.15dvh 0.7dvh rgba(255, 255, 255, 1);
 }
 #textLayer .lineClear{
     font-size: 2.6dvh;
     color: var(--tetris-cyan);
     text-shadow: 0.06dvh 0.06dvh rgba(0, 0, 0, 1),
-                0.1dvh 0.1dvh 3px rgba(255, 255, 255, 1),
-                -0.08dvh -0.08dvh 3px rgba(255, 255, 255, 1);
+                0.1dvh 0.1dvh 0.4dvh rgba(255, 255, 255, 1),
+                -0.08dvh -0.08dvh 0.4dvh rgba(255, 255, 255, 1);
 }
 #textLayer .tetris{
     font-size: 2.8dvh;
     color: var(--tetris-orange);
     text-shadow: 0.1dvh 0.1dvh rgba(0, 0, 0, 1),
-                0.15dvh 0.15dvh 5px rgba(255, 255, 255, 1),
-                -0.15dvh -0.15dvh 5px rgba(255, 255, 255, 1);
+                0.15dvh 0.15dvh 0.7dvh rgba(255, 255, 255, 1),
+                -0.15dvh -0.15dvh 0.7dvh rgba(255, 255, 255, 1);
 }
 #textLayer .tspin{
     font-size: 2.8dvh;
     color: var(--tetris-purple);
     text-shadow: 0.1dvh 0.1dvh rgba(0, 0, 0, 1),
-                0.15dvh 0.15dvh 5px rgba(255, 255, 255, 1),
-                -0.15dvh -0.15dvh 5px rgba(255, 255, 255, 1);
+                0.15dvh 0.15dvh 0.7dvh rgba(255, 255, 255, 1),
+                -0.15dvh -0.15dvh 0.7dvh rgba(255, 255, 255, 1);
 }
 #textLayer .backtoback{
     font-size: 2.8dvh;
     line-height: 3dvh;
     color: var(--tetris-green);
     text-shadow: 0.1dvh 0.1dvh rgba(0, 0, 0, 1),
-                0.15dvh 0.15dvh 5px rgba(255, 255, 255, 1),
-                -0.15dvh -0.15dvh 5px rgba(255, 255, 255, 1);
+                0.15dvh 0.15dvh 0.7dvh rgba(255, 255, 255, 1),
+                -0.15dvh -0.15dvh 0.7dvh rgba(255, 255, 255, 1);
 }
 #textLayer .perfect{
     font-size: 3.7dvh;
     color: var(--tetris-yellow);
     text-shadow: 0.1dvh 0.1dvh rgba(0, 0, 0, 1),
-                0.2dvh 0.2dvh 5px rgba(255, 255, 255, 1),
-                -0.2dvh -0.2dvh 5px rgba(255, 255, 255, 1);
+                0.2dvh 0.2dvh 0.7dvh rgba(255, 255, 255, 1),
+                -0.2dvh -0.2dvh 0.7dvh rgba(255, 255, 255, 1);
 }
 #textLayer .point{
     padding-bottom: 1.5dvh;
     font-size: 2.5dvh;
-    text-shadow: 0.1dvh 0.1dvh 3px rgba(255, 255, 255, 1);
+    text-shadow: 0.1dvh 0.1dvh 0.4dvh rgba(255, 255, 255, 1);
 }
 #textLayer .bonus{
     padding-bottom: 1.5dvh;
     font-size: 3dvh;
-    text-shadow: 0.2dvh 0.2dvh 3px rgba(255, 255, 255, 1);
+    text-shadow: 0.2dvh 0.2dvh 0.4dvh rgba(255, 255, 255, 1);
 }
 #textLayer .levelup{
     font-size: 3.7dvh;
     color: rgb(0, 0, 0);
-    text-shadow: 0.2dvh 0.2dvh 5px rgba(255, 255, 255, 1),
-                -0.2dvh -0.2dvh 5px rgba(255, 255, 255, 1);
+    text-shadow: 0.2dvh 0.2dvh 0.7dvh rgba(255, 255, 255, 1),
+                -0.2dvh -0.2dvh 0.7dvh rgba(255, 255, 255, 1);
 }
 #textLayer .information{
     font-size: 5dvh;
