--- a/css/game_board.css
+++ b/css/game_board.css
@@ -179,7 +179,7 @@
     overflow: hidden;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 3fr 1.2fr 1.2fr 1.2fr 2.4fr;
+    grid-template-rows: 3fr 1.2fr 1.2fr 1.5fr 2.1fr;
     text-align: center;
 }
 .title{
@@ -196,7 +196,6 @@
     font-weight: bold;
     color: var(--tetris-red);
     letter-spacing: 0.1dvh;
-    line-height: 5.1dvh;
 }
 .layer{
     width: 40dvh;
@@ -322,7 +321,11 @@
 }
 #levelBox, #scoreBox, #lineBox{
     margin-top: 0.2dvh;
-    height: 5dvh;
+    min-height: 5dvh;
+    white-space: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #holdBuffer{
     width:100%;
@@ -332,7 +335,11 @@
     width:100%;
     height: 3.6dvh;
 }
+#pauseSection{
+    justify-content: end;
+}
 #pauseButton{
+    margin-bottom: 3.6dvh;
     width: 50%;
     aspect-ratio: 1;
     background-color: rgb(80, 80, 80);
