--- a/css/home.css
+++ b/css/home.css
@@ -423,3 +423,80 @@
     top: -0.2dvh;
     left: 0.1dvh;
 }
+#loading{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80dvh;
+    height: 88dvh;
+    left: calc(50dvw - 40dvh);
+    top: 6dvh;
+    position: absolute;
+    border: 0.4dvh solid black;
+    border-radius: 2%;
+    overflow: hidden;
+    text-align: center;
+    background-color: rgb(30, 30, 30);
+}
+.circle{
+    position: absolute;    
+    aspect-ratio: 1;
+    border-radius: 50%;
+}
+#innerCircle{
+    width: 27%;
+    background-color: rgb(30, 30, 30);
+    border: 0.5dvh solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#outerCircle{
+    width: 30%;
+    border: 2dvh solid transparent;
+    background-image: linear-gradient(rgb(30, 30, 30), rgb(30, 30, 30)), conic-gradient(
+                    transparent 0% 7%, 
+                    var(--tetris-red) 7% calc(100%/3 - 7%),
+                    transparent calc(100%/3 - 7%) calc(100%/3 + 7%),
+                    var(--tetris-green) calc(100%/3 + 7%) calc(200%/3 - 7%),
+                    transparent calc(200%/3 - 7%) calc(200%/3 + 7%),
+                    var(--tetris-blue) calc(200%/3 + 7%) 93%,
+                    transparent 93% 100%);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    animation-name: rotation;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1);
+}
+@keyframes rotation {
+    from {rotate: 0deg;}
+    to {rotate: 360deg;}
+}
+#t_mino{
+    width: 62%;
+    aspect-ratio: 1;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+}
+.loadText{
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 2.7dvh;
+    color: white;
+    letter-spacing: -0.1dvh;
+    text-shadow: 0.2dvh 0.2dvh rgba(127, 127, 127, 0.5);
+}
+.Korean{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 3dvh;
+    letter-spacing: 0dvh;
+}
+.OldKorean{
+    font-family: 'Noto Serif KR', sans-serif;
+    font-size: 3dvh;
+    letter-spacing: 0dvh;
+}
