--- a/css/game_board.css
+++ b/css/game_board.css
@@ -389,3 +389,32 @@
     box-shadow: 0.4dvh 0.4dvh rgba(0, 0, 0, 0.3),
                 -0.4dvh -0.4dvh rgba(255, 255, 255, 0.1);
 }
+#musicBox{
+    width: 92%;
+    top: 91%;
+    position: absolute;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: baseline;
+    font-family: Arial, Helvetica, sans-serif;    
+    line-height: 3dvh;  
+}
+#musicBox>a{
+    width: 15%;
+    text-decoration: none;
+    font-size: 2.6dvh;
+    color: black;
+    text-shadow: 0.2dvh 0.2dvh rgba(0, 0, 0, 0.5);
+}
+#musicBox>div{
+    width: 68%;
+    font-size: 2.2dvh;
+    font-style: italic;
+    color: black;
+    text-shadow: 0.05dvh 0.05dvh rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+}
+#bgm_title{
+    position: relative;
+}
