--- a/css/home.css
+++ b/css/home.css
@@ -15,6 +15,9 @@
     -ms-user-select:none;
     user-select:none
 }
+body{
+    overflow: hidden;
+}
 #home{
     width: 80dvh;
     height: 88dvh;
