--- a/css/modal.css
+++ b/css/modal.css
@@ -221,7 +221,20 @@
     font-style: italic;
     color: rgb(255, 211, 0);
     text-shadow: 0.17dvh 0.17dvh rgba(255, 211, 0, 0.5);
+}
+.oneLine{
+    font-size: 2.7dvh;
+    letter-spacing: 0dvh;
     white-space-collapse: collapse;
+    text-wrap-mode: nowrap;
+}
+.twoLines{
+    top: -0.5dvh;
+    padding-bottom: 0dvh;
+    line-height: 2.7dvh;
+    font-size: 2.5dvh;
+    letter-spacing: 0dvh;
+    white-space-collapse: preserve;
     text-wrap-mode: nowrap;
 }
 #scoreCopy{
@@ -402,10 +415,10 @@
     background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3));
 }
 .dropdownBtn p:nth-child(1){
-    width: 88%;
+    width: 87%;
 }
 .dropdownBtn p:nth-child(2){
-    width: 12%;
+    width: 13%;
     text-align: left;
     text-shadow: 0.1dvh 0 white;
 }
@@ -440,6 +453,14 @@
 #dropdown-contents a:hover{
     background-color: white;
     color: black;
+}
+.korean{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 1.8dvh;
+}
+.old_korean{
+    font-family: 'Noto Serif KR', sans-serif;
+    font-size: 1.8dvh;
 }
 .option-title{
     padding-left: 0.8dvh;
